# AIAS4

./: .gitignore  compare.py  grid_search.py  main.py  requirements.txt
src/segmentation_ui/: main.py  pyproject.toml
src/segmentation_ui/segmentation_ui/: backend.py  constants.py  create_feature_set_dialog.py  create_model_dialog.py  dashboard.py  feature_sets_page.py  main_window.py  map_3d.py  model_detail.py  multi_run_dialog.py  results_page.py  run_detail.py
src/segmentation_v2/: fft_segments.py  frequency_analysis.py  frequency_diagnostic.py  frequency_features.py  pipeline.py  program.ps1  pyproject.toml
src/segmentation_v2/bruteforce_paa/: README.md  manifest.csv  manifest.json  run_bruteforce.py
src/segmentation_v2/bruteforce_sample/: README.md  manifest.csv  manifest.json  run_bruteforce.py
src/segmentation_v2/feature_sets/: bf_fft_hybrid_core.json  bf_paa_hybrid_core_b16_d0_pca20.json  bf_paa_raw3_b16_d0_pca20.json  bf_paa_raw3_b8_d0.json  bf_paa_raw3_b8_d1.json  bf_paa_raw_basic_derived_b4_d0.json  bf_paa_raw_basic_derived_b8_d1.json  bf_paa_raw_rf_b16_d0_pca20.json  bf_paa_robertson_core_b4_d0.json  bf_paa_robertson_core_b8_d0.json  bf_paa_robertson_core_b8_d1.json  bf_sample_hybrid_core_l16_d0_pca20.json  bf_sample_hybrid_core_l32_d0_pca20.json  bf_sample_hybrid_core_l32_d1_pca30.json  bf_sample_raw3_l16_d0_pca20.json  bf_sample_raw3_l16_d1_pca20.json  bf_sample_raw3_l32_d1_pca30.json  bf_sample_raw_basic_derived_l16_d1_pca20.json  bf_sample_raw_basic_derived_l32_d1_pca30.json  bf_sample_raw_rf_l16_d0_pca20.json  bf_sample_raw_rf_l32_d0_pca20.json  (+42 more)
(+179 files in other folders)
