[project]
authors = [{name = "Mateusz Matejko", email = "mmate@ramboll.com"}]
dependencies = ["pyqt6", "matplotlib", "pandas", "numpy"]
name = "segmentation_ui"
requires-python = ">= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
segmentation_ui = { path = ".", editable = true }

[tool.pixi.tasks]
app = "python main.py"
