[project]
authors = [{name = "Mateusz Matejko", email = "mmate@ramboll.com"}]
dependencies = ["pandas", "scikit-learn", "numpy", "matplotlib"]
name = "segmentation_v2"
requires-python = ">= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
segmentation_v2 = { path = ".", editable = true }

[tool.pixi.tasks]
run = "python pipeline.py"
